# iot-mini-projects

week1/: README.md  abstract.md
week2/: README.md  abstract.md
week3/: README.md  abstract.md
week3/src/avant_garde/: Cargo.toml
week3/src/avant_garde/src/: agent.rs  comm.rs  localizer.rs  logger.rs  main.rs  main.rs.bak  sensor.rs  ui.rs
week3/src/node_firmware/: mosquitto.conf  node_firmware.ino  reflash.sh  run.sh
week4/: plate_detector_live.py
week5/: ARCHITECTURE.md  Cargo.toml  NETWORK.md  README.md  abstract.md  sync.sh  whyblue-client.toml  whyblue-server.toml  whyblue.toml.example
week5/whyblue-core/: Cargo.toml
week5/whyblue-core/src/: distance.rs  engine.rs  ipc.rs  lib.rs  metrics.rs  protocol.rs  state.rs  transition.rs  types.rs
week5/whyblue-core/src/transport/: bluetooth.rs  mod.rs  wifi.rs
week5/whyblue-tui/: Cargo.toml
week5/whyblue-tui/src/: app.rs  ipc_client.rs  main.rs
week5/whyblue-tui/src/ui/: chat.rs  control.rs  dashboard.rs  mod.rs  state_view.rs  transport_view.rs
week5/whyblued/: Cargo.toml
week5/whyblued/src/: config.rs  main.rs
