[workspace]
members = [
    "whyblue-core",
    "whyblued",
    "whyblue-tui",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Sahil"]
description = "WhyBlue - Hybrid Wi-Fi/Bluetooth dual-transport networking daemon"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
