[package]
name = "whyblue-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Core library for WhyBlue dual-transport networking"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
byteorder = "1"
libc = "0.2"
bluer = { version = "0.17", features = ["bluetoothd"] }
