[package]
name = "whyblue-tui"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "WhyBlue TUI dashboard - real-time monitoring and control"

[[bin]]
name = "whyblue-tui"
path = "src/main.rs"

[dependencies]
whyblue-core = { path = "../whyblue-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
ratatui = "0.29"
crossterm = "0.28"
